<resources>
    <string name="app_name">演绎秀</string>
    <string name="app_name1">每日一撸</string>
    <string name="app_name2">热门</string>
    <string name="app_name3">分类</string>
    <string name="app_name4">收藏</string>
    <string name="app_name4.1">搜索</string>
    <string name="app_name5">最新</string>
    <string name="app_name6">热门</string>
    <string name="app_name7">动态</string>
    <string name="app_name8">剧本</string>
    <string name="app_name9">演绎秀</string>
    <string name="app_name10">评论</string>
    <string name="app_name11">演绎</string>
    <string name="app_name12">礼物</string>
    <string name="app_name13">编辑资料</string>
    <string name="app_name14">关注</string>
    <string name="app_name15">YY号</string>
    <string name="app_name16">粉丝</string>
    <string name="app_name17">个人资料</string>
    <string name="app_name18">保存</string>
    <string name="app_name19">头像</string>
    <string name="app_name20">封面背景</string>
    <string name="app_name21">昵称</string>
    <string name="app_name22">出生日期</string>
    <string name="app_name23">性别</string>
    <string name="app_name24">城市</string>
    <string name="app_name25">CP</string>
    <string name="app_name26">账号</string>
    <string name="app_name27">检查更新</string>
    <string name="app_name28">投诉建议</string>
    <string name="app_name29">关于</string>
    <string name="app_name30">退出当前账号</string>
    <string name="app_name31">设置</string>
    <string name="app_name32">分享有礼</string>
    <string name="app_name34">反馈有礼</string>
    <string name="app_name35">首页</string>
    <string name="app_name36">Y友圈</string>
    <string name="app_name37">剧本</string>
    <string name="app_name38">服务</string>
    <string name="app_name39">我的</string>
    <string name="app_name40">余额：</string>
    <string name="app_name41">鲜花</string>
    <string name="app_name42">数量：</string>
    <string name="app_name43">送出</string>
    <string name="app_name44">-</string>
    <string name="app_name45">+</string>
    <string name="app_name46">1</string>
    <string name="app_name47">YY会员</string>
    <string name="app_name48">不做大多数\n成为尊贵的演绎会员！</string>
    <string name="app_name49">会员中心</string>
    <string name="app_name50">开通YY会员</string>
    <string name="app_name51">会员专属特权</string>
    <string name="app_name52">3个月</string>
    <string name="app_name53">6个月</string>
    <string name="app_name54">12个月</string>
    <string name="app_name55">自定义月</string>
    <string name="app_name56">YY会员</string>
    <string name="app_name57">30</string>
    <string name="app_name58">元</string>
    <string name="app_name59">立即开通</string>
    <string name="app_name60">好友代付</string>
    <string name="app_name61">赠送好友</string>
    <string name="app_name62">到期自动续费</string>
    <string name="app_name63">余额</string>
    <string name="app_name64">0.0Y银</string>
    <string name="app_name65">提现</string>
    <string name="app_name66">收入明细</string>
    <string name="app_name67">提现查询</string>
    <string name="app_name68">绑定支付宝账户</string>
    <string name="app_name69">零度</string>
    <string name="app_name70">充值</string>
    <string name="app_name71">记住密码</string>
    <string name="app_name72">忘记密码</string>
    <string name="app_name73">升级加速</string>
    <string name="app_name74">作品改名</string>
    <string name="app_name75">更多签到奖励</string>
    <string name="app_name76">排名靠前</string>
    <string name="app_name77">红色昵称</string>
    <string name="app_name78">特别关心</string>
    <string name="app_name79">更多特权敬请期待</string>
    <string name="app_name80">男</string>
    <string name="app_name81">女</string>
    <string name="app_name82">取消</string>
    <string name="app_name83">QQ</string>
    <string name="app_name84">微信</string>
    <string name="app_name85">演绎好友</string>
    <string name="app_name86">复制链接</string>
    <string name="app_name87">发送通知</string>
    <string name="app_name88">取消通知</string>
    <string name="app_name89">发送验证码</string>
    <string name="app_name90">下一步</string>
    <string name="app_name91">找回密码</string>
    <string name="app_name92">你还没有收藏任何剧本哦</string>
    <string name="app_name93">你还没有收藏任何演绎秀哦</string>
    <string name="app_name94">我收藏的剧本</string>
    <string name="app_name95">我收藏的演绎秀</string>
    <string name="app_name96">收起</string>
    <string name="app_name97">输入评论内容</string>
    <string name="app_name98">发送</string>
    <string name="app_name99">10分钟前</string>
    <string name="app_name100">评论</string>
    <string name="app_name101">说点什么吧...</string>
    <string name="app_name102">发送</string>
    <string name="app_name103">说点什么吧...</string>
    <string name="app_name104">说点什么吧...</string>
    <string name="app_name105">说点什么吧...</string>
    <string name="app_name106">点击录制</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始录音</string>
    <string name="stop">停止录音</string>
    <string name="play">播放录音</string>
    <string name="pause_play">暂停播放</string>
    <string name="stop_play">停止播放</string>
    <string name="release_file">释放录音</string>
    <string name="ok">播放完毕</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qianbao">qianbaoActivity</string>
    <string name="title_activity_forgetpass">forgetpassActivity</string>
    <string name="title_activity_forget">forgetActivity</string>
    <string name="title_activity_collect">collectActivity</string>


</resources>
