<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="148dp"
        android:layout_toLeftOf="@+id/stop"
        android:layout_toStartOf="@+id/stop"
        android:text="@string/start" />


    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start"
        android:layout_alignBottom="@+id/start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/paly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_alignStart="@+id/start"
        android:layout_below="@+id/start"
        android:layout_marginTop="41dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/pause_paly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paly"
        android:layout_alignBottom="@+id/paly"
        android:layout_alignLeft="@+id/stop"
        android:layout_alignStart="@+id/stop"
        android:text="@string/pause_play" />

    <Button
        android:id="@+id/stop_paly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paly"
        android:layout_alignStart="@+id/paly"
        android:layout_below="@+id/paly"
        android:layout_marginTop="31dp"
        android:text="@string/stop_play" />

    <Button
        android:id="@+id/release_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pause_paly"
        android:layout_alignStart="@+id/pause_paly"
        android:layout_below="@+id/pause_paly"
        android:layout_marginTop="31dp"
        android:text="@string/release_file" />

</RelativeLayout>