<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/manId"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/app_name80"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/womanId"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/app_name81"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/app_name82"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>