<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="21dp">

        <!--qq-->
        <TextView
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/qq"
            android:gravity="center_horizontal"

            android:text="@string/app_name83"
            android:textColor="#000"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/share_wx_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/weixin"
            android:gravity="center_horizontal"
            android:text="@string/app_name84"
            android:textColor="#000"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/share_yy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/yanxiao"
            android:gravity="center_horizontal"
            android:text="@string/app_name85"
            android:textColor="#000"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/share_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/copy"
            android:gravity="center_horizontal"
            android:text="@string/app_name86"
            android:textColor="#111"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_above="@+id/share_cancel"
        android:background="@color/colorHui"/>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="取消"
        android:textColor="#000"
        android:textSize="16sp"/>

</LinearLayout>
